--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,15 @@ body {
   text-align: center;
 }
 
+.card-c {
+  background-color: rgba(255, 255, 255, 0.445);
+}
+
+.img-card {
+  width: auto;
+  height: 200px;
+}
+
 .button {
   background-color: black;
   border-radius: 10px;
